# velox

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  RELEASE_0_1_2_PLAN.yml  RELEASE_V1_PLAN.yml  TODO.md
.githooks/: commit-msg
.github/workflows/: ci.yml  skia-native.yml  wgpu-smoke.yml
ci/: run-skia-tests.sh
docker/wgpu/: Dockerfile  run-wgpu-tests.sh
docs/: sfc-events.md  wgpu-ci.md
examples/demoapp/: Cargo.toml
examples/demoapp/src/: main.rs
examples/demoapp2/: Cargo.toml
examples/demoapp2/src/: App.vx  main.rs
examples/demoapp3/: Cargo.toml
examples/demoapp4/: Cargo.toml  build.rs
examples/demoapp4/src/: main.rs
examples/gallery/: Cargo.toml
examples/interactive_skia/: Cargo.toml  README.md
examples/interactive_skia/src/: main.rs
examples/myapp/: Cargo.toml  build.rs
examples/myapp/src/: App.vx  main.rs
examples/todo/src/: App.vx
examples/vx_demo/: Cargo.toml  build.rs
examples/vx_demo/src/: App.vx  main.rs
velox-cli/: Cargo.toml
velox-cli/src/: lib.rs  main.rs
velox-cli/tests/: build_tests.rs
velox-core/: Cargo.toml
velox-core/src/: lib.rs  lifecycle.rs  ref_cell.rs  signal.rs  watch.rs
velox-core/tests/: lifecycle_tests.rs  ref_cell_tests.rs  signal_tests.rs  watch_tests.rs
velox-dom/: Cargo.toml
velox-dom/src/: diff.rs  layout.rs  lib.rs
velox-dom/tests/: diff_tests.rs  layout_tests.rs
velox-renderer/: Cargo.toml  build.rs
velox-renderer/benches/: skia_render_bench.rs
velox-renderer/src/: events.rs  lib.rs  skia_gl.rs  skia_render.rs  skia_surface.rs
velox-renderer/tests/: a11y_tree_tests.rs  backends.rs  e2e_tests.rs  events_hit_test.rs  events_runtime_tests.rs  events_tests.rs  mount_tests.rs  reconcile_keyed_tests.rs  renderer_api.rs  skia_batching_render.rs  skia_border_radius_render.rs  skia_border_render.rs  skia_dpr_render.rs  skia_draw.rs  skia_gpu_surface.rs  skia_hover_render.rs  skia_image_filter_render.rs  skia_init.rs  skia_text_render.rs  skia_text_wrap_render.rs  skia_vnode_render.rs  wgpu_init.rs
velox-sfc/: Cargo.toml
velox-sfc/src/: codegen.rs  codegen_unit_tests.rs  grammar.pest  lib.rs  sfc.rs  template_ast.rs  template_codegen.rs  template_parse.rs
velox-sfc/tests/: integration_compile.rs  make_on_event_tests.rs  sfc_split_tests.rs  template_codegen_tests.rs  template_parse_tests.rs  v_else_if_tests.rs  v_else_parse_tests.rs  v_else_tests.rs  v_if_tests.rs
velox-style/: Cargo.toml
velox-style/src/: lib.rs
velox-style/tests/: hover_tests.rs  style_apply_tests.rs  style_parse_tests.rs
