
[package]
name = "velox-renderer"
version = "0.1.0"
edition = "2021"
publish = false

[features]
# Build nothing by default. Opt in when you’re ready.
default = []

# Optional backends
wgpu = ["dep:winit", "dep:wgpu"]
# `skia` enables the API surface; `skia-native` pulls the heavy dependency.
skia = []
skia-native = ["dep:skia-safe", "skia"]

[dependencies]
# Optional backends (do NOT compile unless feature enabled)
winit = { version = "0.28", optional = true }
wgpu = { version = "0.16", optional = true }
skia-safe = { version = "0.52", features = ["gl", "egl"], optional = true }
velox-dom = { path = "../velox-dom" }

[dev-dependencies]
velox-core = { path = "../velox-core" }
velox-style = { path = "../velox-style" }
